--- a/src/pages/landingPage/landing.css
+++ b/src/pages/landingPage/landing.css
@@ -1,5 +1,22 @@
-.landing-container{
+.landing--panels{
+    flex:1 0 ;
+    display: flex;
     width:100%;
     height:100%;
-    background-color: yellowgreen;
+}
+
+.landing__content{
+    width:100%;
+    flex: 1;
+    display:flex;
+
+}
+
+.panel-green{
+    background-color: #4A5E49;
+    
+}
+
+.panel-yeet{
+    background-color: white;
 }
