--- a/src/pages/landingPage/landing.css
+++ b/src/pages/landingPage/landing.css
@@ -59,6 +59,12 @@ button:hover{
     padding-top: 1em;
 }
 
+.buttonGroup button{
+    width:80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .writeButton{
     background-color: #345276;
 }
