--- a/src/pages/landingPage/landing.css
+++ b/src/pages/landingPage/landing.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Vollkorn:wght@800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
 .landing--panels{
     flex:1 0 ;
@@ -42,6 +42,7 @@ button{
     display: block;
     margin-top: 1em;
     color: #F2F3F4;
+    width: 80%;
     font-family: Josefin Sans;
     text-align: center;
     font-size: 18px;
