--- a/src/pages/landingPage/landing.css
+++ b/src/pages/landingPage/landing.css
@@ -2,13 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
 .landing--panels{
-    flex:1 0 ;
     width:100%;
     height:100%;
 }
 
 .landing__content{
     width:100%;
+    height:100%;
     flex: 1;
     display:flex;
 }
@@ -22,10 +22,11 @@
 
 .panel-yeet{
     background-color: white;
-    padding: 4em 4em 0em 4em;
+    padding: 4em 4em 0 4em;
 }
 
 h1{
+    margin-top: 0.5em;
     font-family: 'Vollkorn', serif;
     font-size: 50px;
     font-weight: 800;
@@ -39,7 +40,6 @@ p{
 }
 
 button{
-    display: block;
     margin-top: 1em;
     color: #F2F3F4;
     width: 80%;
@@ -57,13 +57,14 @@ button:hover{
 }
 
 .buttonGroup{
+    margin: 0 auto !important;
+    display: block;
     padding-top: 1em;
+    align-items: left;
 }
 
 .buttonGroup button{
     width:80%;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .writeButton{
