--- a/src/pages/faq/faqs.css
+++ b/src/pages/faq/faqs.css
@@ -1,19 +1,113 @@
-.faqcontainer {  
-    margin-top: 20px;
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 
+
+
+
+
+body {
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  background: #fff;
+  line-height:26px;
+} 
+
+h1 {
+ font-family: "Vollkorn" ;
+font-weight: 800;
+font-style: normal;
+color: #4A5E49;
+  font-size: 40px;
+  
 }
 
-.faqcontainer h1 {
-    color: 
-     #4A5E49;
+h3 {
     
+
+
+    font-family: "Josefin Sans";
+   font-weight: normal;
+   font-style: normal;
+   color: #000000;
+    font-size: 18px;
+     
+   }
+   
+
+.faqcontainer {
+  margin-top: 15px;
+  width: 100%;
+  padding: 20px;
+   margin: 20px; 
+  padding: 0 60px 0 0;
 }
 
-.faqcontainer li {
-    
-    font-family: 'Josefin Sans', serif;
-
-     margin-bottom: 20px;
-    
+.centerplease {
+  margin: 0 auto;
+  max-width: 270px;
+  font-size: 40px;
 }
 
+.question {
+  
+    font-family: "Josefin Sans";
+  color: #000000;
+  position: relative;
+  background: #d7d8d5e7;
+  margin: 0;
+  padding: 10px 10px 10px 50px;
+  display: block;
+  width:100%;
+  cursor: pointer;
+}
+
+.answers {
+  font-weight:300;
+  background: #f2f2f2;
+  padding: 0px 15px;
+  margin: 0px 0;
+  height: 0;
+  overflow: hidden;
+  z-index: 2;
+  position: relative;
+  opacity: 0;
+  -webkit-transition: .7s ease;
+  -moz-transition: .7s ease;
+  -o-transition: .7s ease;
+  transition: .7s ease;
+}
+
+.questions:checked ~ .answers{
+  height: auto;
+  opacity: 1;
+  padding: 15px;
+}
+
+.plus {
+  color:#000000;
+  position: absolute;
+  margin-left: 10px;
+  margin-top: 5px;
+  z-index: 5;
+  font-size: 2em;
+  line-height: 100%;
+  -webkit-user-select: none;    
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-transition: .3s ease;
+  -moz-transition: .3s ease;
+  -o-transition: .3s ease;
+  transition: .3s ease;
+}
+
+.questions:checked ~ .plus {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.questions {
+  display: none;
+}
