--- a/src/pages/faq/faqs.css
+++ b/src/pages/faq/faqs.css
@@ -11,12 +11,13 @@ body {
   line-height:26px;
 } 
 
-h1 {
+.faqcontainer h1 {
  font-family: "Vollkorn" ;
 font-weight: 800;
 font-style: normal;
 color: #4A5E49;
   font-size: 40px;
+  margin-bottom: 20px;
   
 }
 
@@ -29,6 +30,7 @@ h3 {
    font-style: normal;
    color: #000000;
     font-size: 18px;
+    margin-bottom: 20px;
      
    }
    
