Stylized About Page
Stylized the about page.

--- a/src/pages/reviewForm/writereview.css
+++ b/src/pages/reviewForm/writereview.css
@@ -5,7 +5,7 @@ body{
     padding-bottom: 4em;
 }
 
-h1{
+.reviewTitle{
     margin-top: 2em;
     font-family: 'Vollkorn', serif;
     font-size: 40px;
