using .env for backend url

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -7,7 +7,7 @@
     font-family: 'Vollkorn', serif;
     font-size: 40px;
     font-weight: 800;
-    color: #B15239;
+    color: #345276;
 }
 
 .whitespace{
