--- a/src/pages/reviewForm/writereview.css
+++ b/src/pages/reviewForm/writereview.css
@@ -10,7 +10,7 @@ body{
     font-family: 'Vollkorn', serif;
     font-size: 40px;
     font-weight: 800;
-    color: #345276;
+    color: #B15239;
 }
 
 p{
